[project]
name = "massless" # Set by nens-meta
description = "Reinout's scripts for lowering his mass and making nice graphs"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.7"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "typer[all]",
    "xmltodict",
]
dynamic = ["version"] # Set by nens-meta

[project.optional-dependencies]
test = [
    "data-science-types",
    "pytest",
    "types-xmltodict"
]

[project.urls]
homepage = "https://github.com/nens/massless"

[project.scripts]
run-massless = "massless.scripts:main"

[tool.setuptools] # Whole section managed by nens-meta
packages = ["massless"]
zip-safe = false

[tool.setuptools.dynamic] # Whole section managed by nens-meta
version = {attr = "massless.__version__"}
[tool.pytest.ini_options] # Whole section managed by nens-meta
log_level = "DEBUG"
testpaths = ["massless"]

[tool.zest-releaser]
release = false
python-file-with-version = "massless/__init__.py"

[tool.dependencychecker]
ignore-packages = ["data-science-types", "types-xmltodict"]

[tool.coverage.run] # Whole section managed by nens-meta
source = ["massless"]

[tool.coverage.report] # Whole section managed by nens-meta
show_missing = true
skip_empty = true

[tool.ruff] # Whole section managed by nens-meta
target-version = "py38" # Set by nens-meta

[tool.ruff.lint] # Whole section managed by nens-meta
select = ["E4", "E7", "E9", "F"]
[tool.pyright]
include = ["massless"] # Set by nens-meta
venvPath = "." # Set by nens-meta
venv = ".venv" # Set by nens-meta

[build-system] # Whole section managed by nens-meta
requires = ["setuptools>=69"]
