[build-system]
requires = ["setuptools>=69"] # Suggested by nens-meta

[project]
name = "massless" # Set by nens-meta
description = "Reinout's scripts for lowering his mass and making nice graphs"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.7"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "typer[all]",
    "xmltodict",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "data-science-types",
    "pytest",
    "types-xmltodict"
]

[project.urls]
homepage = "https://github.com/nens/massless"

[project.scripts]
run-massless = "massless.scripts:main"

[tool.setuptools]
packages = ["massless"] # Set by nens-meta
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "massless.__version__"}

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = ["massless"] # Set by nens-meta

[tool.zest-releaser]
release = false
python-file-with-version = "massless/__init__.py"

[tool.dependencychecker]
ignore-packages = ["data-science-types", "types-xmltodict"]

[tool.coverage.run]
source = ["massless"] # Set by nens-meta

[tool.coverage.report] # show_missing and skip_empty set by nens-meta
show_missing = true
skip_empty = true

[tool.ruff] # Required: target-version
target-version = "py311"

[tool.ruff.lint] # Required: select
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]

[tool.pyright]
include = ["massless"] # Set by nens-meta
venvPath = "." # Set by nens-meta
venv = ".venv" # Set by nens-meta
