[build-system]
requires = ["setuptools>=69"]

[project]
name = "massless"
description = "Reinout's scripts for lowering his mass and making nice graphs"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "reflex>=0.7.14",
    "typer",
    "xmltodict",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "data-science-types",
    "pytest",
    "types-xmltodict",
]

[project.urls]
homepage = "https://github.com/nens/massless"

[project.scripts]
run-massless = "massless.scripts:main"

[tool.setuptools]
packages = ["massless"]

[tool.setuptools.dynamic]
version = {attr = "massless.__version__"}

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = ["massless"]

[tool.zest-releaser]
release = false
python-file-with-version = "massless/__init__.py"

[tool.dependencychecker]
ignore-packages = ["data-science-types", "types-xmltodict"]

[tool.coverage.run]
source = ["massless"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]

[tool.pyright]
include = ["massless"]
venvPath = "."
venv = ".venv"
